// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyStocks component tests should match snapshot 1`] = `
<input
  className="text-input"
  placeholder="Hello!"
  type="text"
/>
`;

exports[`CurrencyStocks component tests snapshot matches 1`] = `
<DocumentFragment>
  <input
    class="text-input"
    placeholder="Hello!"
    type="text"
  />
</DocumentFragment>
`;
